--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.unity.xr.legacyinputhelpers": "2.1.7",
     "com.unity.xr.management": "4.2.1",
     "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.1.4.tgz",
+    "com.varjo.xr": "https://github.com/varjocom/VarjoUnityXRPlugin.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
